# game-of-life

./: README.md  pyproject.toml
src/game_of_life/: __init__.py  __main__.py  main.py
